[package]
name = "learning-httpserver-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
derive_more = "0.99.17"
http = "1.1.0"
hyper = "1.3.1"
mime = "0.3.17"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tracing-subscriber = "0.3.18"

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.5", features = ["client", "http1", "client-legacy"] }
